--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    
+    <title>Covid'19 Tracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <p><h1><center>Covid'19 Tracker</center></h1></p>
     <div id="root"></div>
     <!--
       This HTML file is a template.
